test/fail/basic_syntax/assign_nest.lly
#[
SyntaxError: Cannot nest an assignment within an expression.
Where: File "assign_nest.lly" at line 7
]#

var a = 10
var b = (a = 10)
